[build-system]
requires = ["setuptools>=61.0.0.", "wheel", "setuptools-git-versioning"]
build-backed = "setuptools.build_meta"

[project]
name = "chimedb.cfm"
authors = [
  {name = "D. V. Wiebe for the CHIME Collaboration", email = "dvw@phas.ubc.ca"}
]
description = "CHIME file manager"
requires-python = ">=3.10"
dynamic = ["readme", "version"]
license = {file = "LICENSE"}
dependencies = [
  "click",
  "peewee",
  "chimedb @ git+https://github.com/chime-experiment/chimedb.git",
  "chimedb.data_index @ git+https://github.com/chime-experiment/chimedb_di.git",
]

[project.scripts]
cfm = "chimedb.cfm.cli:cli"


[project.optional-dependencies]
test = [
  "pytest >= 7.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true
